--- a/test-output/old/Free CRM Automation Suite/methods.html
+++ b/test-output/old/Free CRM Automation Suite/methods.html
@@ -1,82 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Free CRM Automation Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69b199">  <td>21/10/02 11:12:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.tests.LoginPageTest@26653222]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>21/10/02 11:12:43</td>   <td>7883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageLogoTest()[pri:0, instance:com.qa.tests.LoginPageTest@26653222]">verifyLoginPageLogoTest</td> 
-  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>21/10/02 11:13:03</td>   <td>27974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.tests.LoginPageTest@26653222]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>21/10/02 11:13:03</td>   <td>28150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.tests.LoginPageTest@26653222]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>21/10/02 11:13:11</td>   <td>35293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyHeaderLinksTest()[pri:0, instance:com.qa.tests.LoginPageTest@26653222]">verifyHeaderLinksTest</td> 
-  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>21/10/02 11:13:11</td>   <td>35456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.tests.LoginPageTest@26653222]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>21/10/02 11:13:11</td>   <td>35593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.tests.LoginPageTest@26653222]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>21/10/02 11:13:18</td>   <td>42732</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.qa.tests.LoginPageTest@26653222]">loginTest</td> 
-  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>21/10/02 11:13:24</td>   <td>48744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.tests.LoginPageTest@26653222]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:13:24</td>   <td>48917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:13:37</td>   <td>61245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserNameDisplayedTest()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">verifyUserNameDisplayedTest</td> 
-  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:13:37</td>   <td>61306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:13:37</td>   <td>61471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:13:50</td>   <td>74206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHeaderTextDisplayedTest()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">verifyHeaderTextDisplayedTest</td> 
-  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:13:50</td>   <td>74244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:13:50</td>   <td>74393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:03</td>   <td>87755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyLeftSideContainerTest()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">verifyLeftSideContainerTest</td> 
-  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:03</td>   <td>87800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:03</td>   <td>87941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:16</td>   <td>100808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifySetUpLinkTest()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">verifySetUpLinkTest</td> 
-  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:16</td>   <td>100845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:16</td>   <td>101010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:29</td>   <td>113655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHelpLinkTest()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">verifyHelpLinkTest</td> 
-  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:29</td>   <td>113694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:29</td>   <td>113862</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:42</td>   <td>126780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyLogoutLinkTest()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">verifyLogoutLinkTest</td> 
-  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:42</td>   <td>126814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:42</td>   <td>126962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:55</td>   <td>139568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNewEventSubMenuTest()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">verifyNewEventSubMenuTest</td> 
-  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>21/10/02 11:14:55</td>   <td>139821</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.tests.HomePageTest@5c3bd550]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="8ad7a2">  <td>21/10/02 11:14:56</td>   <td>140590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewCompanyTest.setUp()[pri:0, instance:com.qa.tests.NewCompanyTest@91161c7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="8ad7a2">  <td>21/10/02 11:15:10</td>   <td>154967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewCompanyTest.createNewCompanyTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.tests.NewCompanyTest@91161c7]">createNewCompanyTest</td> 
-  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="8ad7a2">  <td>21/10/02 11:15:12</td>   <td>157118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewCompanyTest.tearDown()[pri:0, instance:com.qa.tests.NewCompanyTest@91161c7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="8ad7a2">  <td>21/10/02 11:15:13</td>   <td>157262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewCompanyTest.setUp()[pri:0, instance:com.qa.tests.NewCompanyTest@91161c7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="8ad7a2">  <td>21/10/02 11:15:27</td>   <td>171474</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewCompanyTest.createNewCompanyTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.tests.NewCompanyTest@91161c7]">createNewCompanyTest</td> 
-  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="8ad7a2">  <td>21/10/02 11:15:29</td>   <td>173681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewCompanyTest.tearDown()[pri:0, instance:com.qa.tests.NewCompanyTest@91161c7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="8ad7a2">  <td>21/10/02 11:15:29</td>   <td>173828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewCompanyTest.setUp()[pri:0, instance:com.qa.tests.NewCompanyTest@91161c7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="8ad7a2">  <td>21/10/02 11:15:43</td>   <td>187946</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewCompanyTest.createNewCompanyTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.tests.NewCompanyTest@91161c7]">createNewCompanyTest</td> 
-  <td>main@633070006</td>   <td></td> </tr>
-<tr bgcolor="8ad7a2">  <td>21/10/02 11:15:46</td>   <td>190396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewCompanyTest.tearDown()[pri:0, instance:com.qa.tests.NewCompanyTest@91161c7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>21/10/03 20:01:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.tests.LoginPageTest@61832929]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>21/10/03 20:01:23</td>   <td>9182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageLogoTest()[pri:0, instance:com.qa.tests.LoginPageTest@61832929]">verifyLoginPageLogoTest</td> 
+  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>21/10/03 20:01:44</td>   <td>30098</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.tests.LoginPageTest@61832929]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>21/10/03 20:01:45</td>   <td>30245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.tests.LoginPageTest@61832929]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>21/10/03 20:01:52</td>   <td>37396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyHeaderLinksTest()[pri:0, instance:com.qa.tests.LoginPageTest@61832929]">verifyHeaderLinksTest</td> 
+  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>21/10/03 20:01:52</td>   <td>37567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.tests.LoginPageTest@61832929]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>21/10/03 20:01:52</td>   <td>37690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.tests.LoginPageTest@61832929]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>21/10/03 20:01:59</td>   <td>44777</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.qa.tests.LoginPageTest@61832929]">loginTest</td> 
+  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>21/10/03 20:02:05</td>   <td>50384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.tests.LoginPageTest@61832929]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
 </table>
